--- a/common/window-manager/.config/i3/config
+++ b/common/window-manager/.config/i3/config
@@ -154,7 +154,7 @@ bindsym XF86AudioPrev  exec playerctl previous
 exec ~/.config/polybar/launch_polybar.sh
 
 # Set background
-exec feh --bg-scale ~/.config/i3/background.jpg
+exec feh --bg-scale ~/.config/i3/background.png
 
 # Set keyrepreat rate to faster than default
 #         repeat rate delay(ms) #/second
