--- a/common/window-manager/.config/i3/config
+++ b/common/window-manager/.config/i3/config
@@ -163,6 +163,9 @@ exec ~/.config/polybar/launch_polybar.sh
 # Set background
 exec feh --bg-scale ~/.config/i3/background.png
 
+# Start default programs
+exec i3resetworkspaces
+
 # Set keyrepreat rate to faster than default
 #         repeat rate delay(ms) #/second
 exec xset r      rate       250       30
