Change background, and prevent streching on non-widescreen monitors

--- a/common/window-manager/.config/i3/config
+++ b/common/window-manager/.config/i3/config
@@ -164,7 +164,7 @@ bindsym XF86AudioPrev  exec playerctl previous
 exec ~/.config/polybar/launch_polybar.sh
 
 # Set background
-exec feh --bg-scale ~/.config/i3/background.png
+exec feh --bg-fill ~/.config/i3/background.png
 
 # Start default programs
 exec i3resetworkspaces
