--- a/common/window-manager/.config/i3/config
+++ b/common/window-manager/.config/i3/config
@@ -36,13 +36,13 @@ bindsym $mod+Return exec i3-sensible-terminal
 # kill focused window
 bindsym $mod+Shift+q kill
 
-# start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
-# There also is the (new) i3-dmenu-desktop which only displays applications
-# shipping a .desktop file. It is a wrapper around dmenu, so you need that
-# installed.
-# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
-
+########################################
+# Menus
+bindsym $mod+r   exec rofi -show run
+bindsym $mod+d   exec rofi -show run
+bindsym $mod+s   exec rofi -show sshs
+bindsym $alt+Tab exec rofi -show window
+########################################
 
 # Hide borders
 hide_edge_borders none
