--- a/common/window-manager/.config/i3/config
+++ b/common/window-manager/.config/i3/config
@@ -39,7 +39,6 @@ bindsym $mod+Shift+q kill
 ########################################
 # Menus
 bindsym $mod+r   exec rofi -show run
-bindsym $mod+d   exec rofi -show run
 bindsym $mod+s   exec rofi -show ssh
 bindsym $alt+Tab exec rofi -show window
 ########################################
@@ -122,25 +121,10 @@ bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
-# resize window (you can also use the mouse for that)
-mode "resize" {
-        # These bindings trigger as soon as you enter the resize mode
-
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
-        bindsym Left resize shrink width 10 px or 10 ppt
-        bindsym Down resize grow height 10 px or 10 ppt
-        bindsym Up resize shrink height 10 px or 10 ppt
-        bindsym Right resize grow width 10 px or 10 ppt
-
-        # back to normal: Enter or Escape
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
-}
-
-bindsym $mod+r mode "resize"
+bindsym $mod+y resize shrink width  10px or 10 ppt
+bindsym $mod+u resize shrink   height 10px or 10 ppt
+bindsym $mod+i resize grow height 10px or 10 ppt
+bindsym $mod+o resize grow   width  10px or 10 ppt
 
 # Pulse Audio controls
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
