--- a/common/terminator/.config/terminator/config
+++ b/common/terminator/.config/terminator/config
@@ -1,5 +1,4 @@
 [global_config]
-  putty_paste_style = True
   title_hide_sizetext = True
   title_inactive_bg_color = "#d3d7cf"
 [keybindings]
@@ -17,5 +16,8 @@
     background_darkness = 0.7
     background_type = transparent
     copy_on_selection = True
+    cursor_blink = False
     cursor_color = "#aaaaaa"
+    font = Noto Mono for Powerline 11
     show_titlebar = False
+    use_system_font = False
