--- a/common/window-manager/.config/i3/config
+++ b/common/window-manager/.config/i3/config
@@ -100,16 +100,16 @@ bindsym $mod+9 workspace 9
 bindsym $mod+0 workspace 10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace 1
-bindsym $mod+Shift+2 move container to workspace 2
-bindsym $mod+Shift+3 move container to workspace 3
-bindsym $mod+Shift+4 move container to workspace 4
-bindsym $mod+Shift+5 move container to workspace 5
-bindsym $mod+Shift+6 move container to workspace 6
-bindsym $mod+Shift+7 move container to workspace 7
-bindsym $mod+Shift+8 move container to workspace 8
-bindsym $mod+Shift+9 move container to workspace 9
-bindsym $mod+Shift+0 move container to workspace 10
+bindsym $mod+$alt+1 move container to workspace 1
+bindsym $mod+$alt+2 move container to workspace 2
+bindsym $mod+$alt+3 move container to workspace 3
+bindsym $mod+$alt+4 move container to workspace 4
+bindsym $mod+$alt+5 move container to workspace 5
+bindsym $mod+$alt+6 move container to workspace 6
+bindsym $mod+$alt+7 move container to workspace 7
+bindsym $mod+$alt+8 move container to workspace 8
+bindsym $mod+$alt+9 move container to workspace 9
+bindsym $mod+$alt+0 move container to workspace 10
 
 # Move workspace to another monitor
 bindsym $mod+$alt+Left  move workspace to output left
