--- a/common/terminator/.config/terminator/config
+++ b/common/terminator/.config/terminator/config
@@ -20,5 +20,6 @@
     cursor_blink = False
     cursor_color = "#aaaaaa"
     font = Noto Mono for Powerline 11
+    scrollback_infinite = True
     show_titlebar = False
     use_system_font = False
