--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 language: c
 
+os:
+  - linux
+
 before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -y emacs
 
 script:
-  - cd common/emacs/.emacs.d && rebuild.sh
+  - pwd && ls && cd common/emacs/.emacs.d && rebuild.sh
