--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ before_install:
   - sudo apt-get install -y emacs
 
 script:
-  - pwd && ls && cd common/emacs/.emacs.d && rebuild.sh
+  - ./common/emacs/.emacs.d/rebuild.sh
