--- a/common/window-manager/.config/polybar/config
+++ b/common/window-manager/.config/polybar/config
@@ -11,20 +11,20 @@ alert            = #bd2c40
 [bar/top]
 monitor = ${env:MONITOR:}
 width = 100%
-height = 20
+height = 25
 radius = 0.0
 fixed-center = false
 
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-line-size = 3
+line-size = 4
 line-color = #f00
 
 border-size = 0
 border-color = #00000000
 
-separator = "|"
+separator = "  "
 seperator-color = ${colors.foreground-alt}
 
 padding-left = 0
@@ -68,7 +68,7 @@ interval = 25
 
 mount-0 = /
 
-label-mounted =  %free% (%percentage_used%%)
+label-mounted =  %free%
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.foreground-err}
 
