--- a/common/window-manager/.config/polybar/config
+++ b/common/window-manager/.config/polybar/config
@@ -28,10 +28,10 @@ separator =
 seperator-color = ${colors.foreground-alt}
 
 padding-left = 0
-padding-right = 0
+padding-right = 3
 
-module-margin-left = 2
-module-margin-right = 2
+module-margin-left = 1
+module-margin-right = 1
 
 font-0 = Source Sans Pro:style:SemiBold:size=10;1
 font-1 = FontAwesome:size=10;1
@@ -40,7 +40,7 @@ font-3 = Source Han Sans JP:size=10;1
 
 modules-left = bspwm i3
 modules-center = mpd
-modules-right = volume filesystem xbacklight cpu memory temperature wlan eth battery date powermenu
+modules-right = volume filesystem xbacklight cpu memory temperature wlan eth battery date
 
 tray-position = right
 tray-padding = 2
