Make CPU alert less sensitive

--- a/common/window-manager/.config/polybar/config
+++ b/common/window-manager/.config/polybar/config
@@ -234,7 +234,7 @@ ramp-coreload-3-foreground = ${colors.primary}
 ramp-coreload-4 = ▅
 ramp-coreload-4-foreground = ${colors.primary}
 ramp-coreload-5 = ▆
-ramp-coreload-5-foreground = ${colors.alert}
+ramp-coreload-5-foreground = ${colors.primary}
 ramp-coreload-6 = ▇
 ramp-coreload-6-foreground = ${colors.alert}
 ramp-coreload-7 = █
