--- a/common/git/.gitconfig
+++ b/common/git/.gitconfig
@@ -1,5 +1,5 @@
 [core]
-	 editor = emacsclient --alternate-editor="" -c "$@"
+	 editor = emacsclient --alternate-editor="" -nw -c "$@"
 [user]
 		email = jnterry@ntlworld.com
 		name  = Jamie Terry
