Ensure git uses terminal emacs server for commit message editing for faster startup

--- a/common/git/.gitconfig
+++ b/common/git/.gitconfig
@@ -1,5 +1,5 @@
 [core]
-	 editor = emacsclient --alternate-editor="" -nw -c "$@"
+	 editor = emacsclient -nw -s "terminal" --alternate-editor=""  "$@"
 [user]
 		email = jnterry@ntlworld.com
 		name  = Jamie Terry
