--- a/common/window-manager/.config/i3/config
+++ b/common/window-manager/.config/i3/config
@@ -64,11 +64,23 @@ bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
-# split in horizontal orientation
-bindsym $mod+h split h
 
-# split in vertical orientation
+###############################################
+# Keys for splitting control
+
+# Set split direction to horizontal or vertical
+bindsym $mod+h split h
 bindsym $mod+v split v
+
+# focus the parent/child container
+bindsym $mod+p focus parent
+bindsym $mod+l focus child
+###############################################
+
+
+
+###############################################
+# Layout control
 
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
@@ -80,12 +92,9 @@ bindsym $mod+e layout toggle split
 
 # toggle tiling / floating
 bindsym $mod+space floating toggle
+###############################################
 
-# focus the parent container
-bindsym $mod+a focus parent
 
-# focus the child container
-#bindsym $mod+d focus child
 
 # switch to workspace
 bindsym $mod+1 workspace 1
@@ -155,10 +164,20 @@ mode "resize" {
 }
 bindsym $mod+r mode "resize"
 
+
+########################################
 # Pulse Audio controls
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
+
+#increase sound volume
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5%
+
+#decrease sound volume
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5%
+
+# mute toogle
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle
+########################################
+
 
 # Screen brightness controls
 bindsym XF86MonBrightnessUp exec xbacklight -inc 20 # increase screen brightness
