Add default git lfs config

--- a/common/git/.gitconfig
+++ b/common/git/.gitconfig
@@ -10,3 +10,8 @@
 	# https://git-scm.com/docs/git-config#git-config-pushdefault
 	default = simple
 	followTags = true
+[filter "lfs"]
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
+	clean = git-lfs clean -- %f
