--- a/common/git/.gitconfig
+++ b/common/git/.gitconfig
@@ -1,5 +1,3 @@
-[core]
-	 editor = emacsclient -nw -s "terminal" --alternate-editor=""  "$@"
 [user]
 		email = jnterry@ntlworld.com
 		name  = Jamie Terry
@@ -15,3 +13,5 @@
 	process = git-lfs filter-process
 	required = true
 	clean = git-lfs clean -- %f
+[pull]
+	rebase = true
